# cidex

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: bump-version.yml  ci.yml  release.yml
benches/: README.md  run.sh
npm/cidex/: README.md  install.js  package.json
src/: README.md  freq.rs  index.rs  main.rs  mcp.rs  ngram.rs  query.rs  search.rs  store.rs  varint.rs  watcher.rs
tests/: integration.rs
tests/fixtures/: hello.rs  math.py  readme.md
tools/: generate_table.rs
