[package]
name = "cidex"
version = "0.1.2"
edition = "2024"
description = "Indexed code search using frequency-weighted sparse n-gram indexing — beats ripgrep on large codebases."
license = "MIT"
readme = "README.md"
keywords = ["search", "grep", "ripgrep", "regex", "index"]
categories = ["command-line-utilities", "text-processing"]
default-run = "cidex"

[[bin]]
name = "cidex"
path = "src/main.rs"

[[bin]]
name = "generate-table"
path = "tools/generate_table.rs"
required-features = ["devtools"]

[features]
devtools = ["dep:ureq", "dep:flate2", "dep:tar"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
memmap2 = "0.9"
rayon = "1"
regex = "1"
regex-syntax = "0.8"
anyhow = "1"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
memchr = "2"
itoa = "1"
ureq = { version = "3", optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
